# Week6_Mini_Project_Customer_Service_RAG_Support_Chatbot

./: .gitignore  00_MAIN.ipynb  01_DEMO.ipynb  BUILD_STATUS.md  CHANGELOG.md  HARDENING_DECISIONS.md  MINI_PROJECT_PLAN.md  README.md  REPORT_SKELETON.md  SLIDES_OUTLINE.md  UI_GUIDE.md  make_notebooks.py  pyproject.toml  requirements.txt  run_full.py  run_real.py  run_tests.py  serve_app.py  smoke_gpu.py
artifacts/: governance.md  records_matrix.csv  records_undefended.csv  results.json
prototypes/: README_FINGERPRINT_LIGHT.md  README_SOPHISTICATED_ATTACKS.md  README_SOPHISTICATED_DEFENSES.md  SCHEMA_ATTACK_DEFENSE_LEVELS.md  __init__.py  fingerprint_light.py  print_sophisticated_attacks.py  print_sophisticated_defenses.py  run_fingerprint_gpu.py  run_fingerprint_smoke.py  sophisticated_attacks.py  sophisticated_defenses.py
ragguard/: __init__.py  app.py  autotune.py  cache.py  canary.py  config.py  corpus.py  detect.py  drive.py  fingerprint.py  fullrun.py  governance.py  interfaces.py  judge.py  ladder.py  metrics.py  orchestrator.py  prompts.py  rag.py  report.py  schemas.py  testing.py  textnorm.py
ragguard/attacks/: __init__.py  adaptive.py  base.py  levels.py  static.py
tests/: test_app.py  test_attacks.py  test_batch.py  test_cache.py  test_corpus.py  test_defenses.py  test_drive_seed.py  test_foundation.py  test_fullrun.py  test_gaps.py  test_governance.py  test_hardening.py  test_integration.py  test_judge.py  test_ladder.py  test_ladder_defenses.py  test_ladder_report.py  test_metrics_detect.py  test_orchestrator.py  test_rag.py  test_textnorm.py
(+4 files in other folders)
