[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ragguard"
version = "0.1.0"
description = "Agentic red-team / blue-team pipeline for a customer-service RAG chatbot (Trustworthy AI mini-project)"
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools]
packages = ["ragguard", "ragguard.attacks", "ragguard.defenses"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
